[BEAM-12092] using default jackson version for jackson-module-scala

--- a/runners/spark/spark_runner.gradle
+++ b/runners/spark/spark_runner.gradle
@@ -166,7 +166,11 @@ dependencies {
   provided "org.apache.spark:spark-network-common_$spark_scala_version:$spark_version"
   provided "org.apache.spark:spark-sql_$spark_scala_version:$spark_version"
   provided "org.apache.spark:spark-streaming_$spark_scala_version:$spark_version"
-  runtimeOnly "com.fasterxml.jackson.module:jackson-module-scala_$spark_scala_version:2.12.2"
+  if(project.property("spark_scala_version").equals("2.11")){
+    runtimeOnly library.java.jackson_module_scala_2_11
+  } else {
+    runtimeOnly library.java.jackson_module_scala_2_12
+  }
   // Force paranamer 2.8 to avoid issues when using Scala 2.12
   runtimeOnly "com.thoughtworks.paranamer:paranamer:2.8"
   provided library.java.hadoop_common
