--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,9 @@
 #  See the License for the specific language governing permissions and
 # limitations under the License.
 ################################################################################
-org.gradle.caching=true
+
+# TODO: revert the caching to true before merging this to master
+org.gradle.caching=false
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xss10240k
