Fix dependency in wordcount task

--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -114,11 +114,11 @@ task startPortableRunner {
 // Run this task to validate the python environment setup for contributors
 task wordCount {
   description "Run the Python word count example"
-  dependsOn 'buildPython'
+  dependsOn 'installGcpTest'
   doLast {
     exec {
       executable 'sh'
-      args '-c', "python -m apache_beam.examples.wordcount --runner DirectRunner --output /tmp/output.txt"
+      args '-c', ". ${envdir}/bin/activate && python -m apache_beam.examples.wordcount --runner DirectRunner --output /tmp/output.txt"
     }
   }
 }
