[BEAM-2888] Added packages.confluent.io maven repo

--- a/.test-infra/validate-runner/build.gradle
+++ b/.test-infra/validate-runner/build.gradle
@@ -29,6 +29,9 @@ repositories {
     maven {
         url "https://jcenter.bintray.com/"
     }
+    maven {
+        url "https://packages.confluent.io/maven/"
+    }
 }
 
 dependencies {
