--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -161,3 +161,12 @@ task execute (type:JavaExec) {
   systemProperties System.getProperties()
   args System.getProperty("exec.args", "").split()
 }
+
+// Run this task to validate the Java environment setup for contributors
+task wordCount(type:JavaExec) {
+  description "Run the Java word count example"
+  main = "org.apache.beam.examples.WordCount"
+  classpath = sourceSets.main.runtimeClasspath
+  systemProperties = System.getProperties()
+  args = ["--output=/tmp/ouput.txt"]
+}
