--- a/runners/samza/build.gradle
+++ b/runners/samza/build.gradle
@@ -52,6 +52,7 @@ dependencies {
   compile library.java.jackson_annotations
   compile library.java.slf4j_api
   compile library.java.joda_time
+  compile library.java.args4j
   compile library.java.commons_io
   runtimeOnly "org.rocksdb:rocksdbjni:6.15.2"
   runtimeOnly "org.scala-lang:scala-library:2.11.8"
@@ -59,7 +60,6 @@ dependencies {
   compile "org.apache.samza:samza-core_2.11:$samza_version"
   runtimeOnly "org.apache.samza:samza-kafka_2.11:$samza_version"
   runtimeOnly "org.apache.samza:samza-kv_2.11:$samza_version"
-  compile project(":sdks:java:expansion-service")
   compile "org.apache.samza:samza-kv-rocksdb_2.11:$samza_version"
   compile "org.apache.samza:samza-kv-inmemory_2.11:$samza_version"
   compile "org.apache.samza:samza-yarn_2.11:$samza_version"
