--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -46,6 +46,8 @@ dependencies {
   compile library.java.error_prone_annotations
   compile library.java.gax
   compile library.java.gax_grpc
+  compile library.java.gax_httpjson
+  permitUnusedDeclared library.java.gax_httpjson // BEAM-8755
   compile library.java.google_api_client
   compile library.java.google_api_common
   compile library.java.google_api_services_bigquery
