add sdkContainerImage to Java WorkerPool PipelineOptions

--- a/runners/google-cloud-dataflow-java/src/main/resources/org/apache/beam/runners/dataflow/dataflow.properties
+++ b/runners/google-cloud-dataflow-java/src/main/resources/org/apache/beam/runners/dataflow/dataflow.properties
@@ -19,3 +19,4 @@
 legacy.environment.major.version=@dataflow.legacy_environment_major_version@
 fnapi.environment.major.version=@dataflow.fnapi_environment_major_version@
 container.version=@dataflow.container_version@
+container.base_repository=@dataflow.container_base_repository@
