--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -41,6 +41,7 @@ dependencies {
   compile project(":sdks:java:extensions:google-cloud-platform-core")
   compile project(":sdks:java:extensions:protobuf")
   compile project(":runners:core-construction-java")
+  compile project(":sdks:java:extensions:arrow")
   compile library.java.avro
   compile library.java.bigdataoss_util
   compile library.java.error_prone_annotations
