[BEAM-11010] Declaring flogger-system-backend to avoid conflicts
The latest google-cloud-pubsublite uses newer version (0.6) of flogger
than bigdataoss_util uses for flogger-system-backend (0.5.1).
flogger 0.6 is not compatible with flogger-system-backend 0.5.1.
For detailed linkage errors, see the comment in
https://issues.apache.org/jira/browse/BEAM-11010

By declaring the newer version of flogger-system-backend, we can
control the version of the transitive dependency in users' runtime

--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -44,6 +44,8 @@ dependencies {
   compile library.java.avro
   compile library.java.bigdataoss_util
   compile library.java.error_prone_annotations
+  compile library.java.flogger_system_backend // Avoids conflicts with bigdataoss_util (BEAM-11010)
+  permitUnusedDeclared library.java.flogger_system_backend // BEAM-11010
   compile library.java.gax
   compile library.java.gax_grpc
   compile library.java.gax_httpjson
