--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ offlineRepositoryRoot=offline-repository
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
-version=2.21.0-lyft202104231619194328
+version=2.21.0-SNAPSHOT
 sdk_version=2.21.0
 
 javaVersion=1.8
