Updated gradle dependencies

--- a/sdks/java/extensions/arrow/build.gradle
+++ b/sdks/java/extensions/arrow/build.gradle
@@ -24,11 +24,10 @@ description = "Apache Beam :: SDKs :: Java :: Extensions :: Arrow"
 def arrow_version = "3.0.0"
 
 dependencies {
-    compile library.java.slf4j_api
     compile library.java.vendored_guava_26_0_jre
     compile project(path: ":sdks:java:core", configuration: "shadow")
     compile "org.apache.arrow:arrow-vector:3.0.0"
-    compile "org.apache.arrow:arrow-memory-netty:3.0.0"
+    compile "joda-time:joda-time:2.10.10"
     testCompile library.java.junit
     testRuntimeOnly library.java.slf4j_simple
 }
