--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -121,6 +121,9 @@ dependencies {
   compile library.java.vendored_grpc_1_26_0
   compile library.java.vendored_guava_26_0_jre
 
+  compile "org.apache.arrow:arrow-vector:3.0.0"
+  compile "org.apache.arrow:arrow-memory-core:3.0.0"
+
   compile "org.threeten:threetenbp:1.4.4"
 
   testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
