--- a/sdks/java/extensions/arrow/build.gradle
+++ b/sdks/java/extensions/arrow/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile project(path: ":sdks:java:core", configuration: "shadow")
     compile "org.apache.arrow:arrow-vector:3.0.0"
     compile "joda-time:joda-time:2.10.10"
+    testCompile "org.apache.arrow:arrow-memory-netty:3.0.0"
     testCompile library.java.junit
     testRuntimeOnly library.java.slf4j_simple
 }
