[BEAM-12237] Fix logging in Samza Runner
High CPU Usage in IDEA is caused by logging issue in samza runner. To resolve, setting root logging level to WARN but INFO for org.apache.beam group for debugging purpose.

In addition, exclude slf4j-jdk14 to deterministically bind with sl4j-log4j12 so that log4j.properties can take effect.

--- a/runners/samza/build.gradle
+++ b/runners/samza/build.gradle
@@ -79,6 +79,10 @@ dependencies {
   validatesRunner project(project.path)
 }
 
+configurations.all {
+  exclude group: "org.slf4j", module: "slf4j-jdk14"
+}
+
 task validatesRunner(type: Test) {
   group = "Verification"
   description "Validates Samza runner"
