--- a/runners/samza/src/main/resources/log4j.properties
+++ b/runners/samza/src/main/resources/log4j.properties
@@ -16,7 +16,9 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=DEBUG,console
+log4j.rootLogger=WARN,console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}: %m%n
+
+log4j.category.org.apache.beam=INFO
