--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -23,7 +23,8 @@ applyJavaNature(
   automaticModuleName: 'org.apache.beam.sdk.io.gcp',
   enableSpotbugs: false,
   classesTriggerCheckerBugs: [
-    'PubSubPayloadTranslation': 'https://github.com/typetools/checker-framework/issues/3791',
+    'RunnerImplementedSourceTranslation': 'https://github.com/typetools/checker-framework/issues/3791',
+    'RunnerImplementedSinkTranslation': 'https://github.com/typetools/checker-framework/issues/3791',
   ],
 )
 
@@ -44,12 +45,8 @@ dependencies {
   compile library.java.avro
   compile library.java.bigdataoss_util
   compile library.java.error_prone_annotations
-  compile library.java.flogger_system_backend // Avoids conflicts with bigdataoss_util (BEAM-11010)
-  permitUnusedDeclared library.java.flogger_system_backend // BEAM-11010
   compile library.java.gax
   compile library.java.gax_grpc
-  compile library.java.gax_httpjson
-  permitUnusedDeclared library.java.gax_httpjson // BEAM-8755
   compile library.java.google_api_client
   compile library.java.google_api_common
   compile library.java.google_api_services_bigquery
@@ -108,7 +105,8 @@ dependencies {
   compile library.java.netty_tcnative_boringssl_static
   permitUnusedDeclared library.java.netty_tcnative_boringssl_static // BEAM-11761
   compile library.java.proto_google_cloud_bigquery_storage_v1
-  compile library.java.proto_google_cloud_bigquery_storage_v1beta2
+  compile library.java.proto_google_cloud_bigquerybeta2_storage_v1
+  permitUnusedDeclared library.java.proto_google_cloud_bigquerybeta2_storage_v1 // BEAM-11761
   compile library.java.proto_google_cloud_bigtable_admin_v2
   compile library.java.proto_google_cloud_bigtable_v2
   compile library.java.proto_google_cloud_datastore_v1
@@ -135,8 +133,8 @@ dependencies {
   testCompile library.java.powermock
   testCompile library.java.powermock_mockito
   testRuntimeOnly library.java.slf4j_jdk14
-  testRuntimeOnly project(path: ":runners:google-cloud-dataflow-java", configuration: "testRuntime")
 }
+
 
 /**
  * These are integration tests with the real Pubsub service and the DirectRunner.
@@ -144,15 +142,11 @@ dependencies {
 task integrationTest(type: Test, dependsOn: processTestResources) {
   group = "Verification"
   def gcpProject = project.findProperty('gcpProject') ?: 'apache-beam-testing'
-  def gcpTempRoot = project.findProperty('gcpTempRoot') ?: "gs://${gcpProject}.appspot.com/temp"
+  def gcpTempRoot = project.findProperty('gcpTempRoot') ?: 'gs://temp-storage-for-end-to-end-tests'
   systemProperty "beamTestPipelineOptions", JsonOutput.toJson([
-          "--runner=dataflow",
-          "--region=us-central1",
+          "--runner=DirectRunner",
           "--project=${gcpProject}",
           "--tempRoot=${gcpTempRoot}",
-          "--gcpTempLocation=${gcpTempRoot}",
-//          "--numWorkers=20",
-//          "--autoscalingAlgorithm=NONE",
   ])
 
   // Disable Gradle cache: these ITs interact with live service that should always be considered "out of date"
