--- a/sdks/python/test-suites/dataflow/common.gradle
+++ b/sdks/python/test-suites/dataflow/common.gradle
@@ -30,10 +30,9 @@ def runScriptsDir = "${rootDir}/sdks/python/scripts"
 
 // Basic test options for ITs running on Jenkins.
 def basicTestOpts = [
-    "--capture=no",  // print stdout instantly
-    "--numprocesses=8", // run tests in parallel
-    "--timeout=4500", // timeout of whole command execution
-    "--color=yes", // console color
+    "--nocapture",  // print stdout instantly
+    "--processes=8",  // run tests in parallel
+    "--process-timeout=4500", // timeout of whole command execution
 ]
 
 def preCommitIT(String runScriptsDir, String envdir, Boolean streaming, Boolean runnerV2, String pythonSuffix) {
@@ -49,23 +48,22 @@ def preCommitIT(String runScriptsDir, String envdir, Boolean streaming, Boolean 
     doLast {
       // Basic integration tests to run in PreCommit
       def precommitTests = streaming ? [
-              "apache_beam/examples/streaming_wordcount_it_test.py::StreamingWordCountIT::test_streaming_wordcount_it",
+              "apache_beam.examples.streaming_wordcount_it_test:StreamingWordCountIT.test_streaming_wordcount_it",
       ] : [
-              "apache_beam/examples/wordcount_it_test.py::WordCountIT::test_wordcount_it",
+              "apache_beam.examples.wordcount_it_test:WordCountIT.test_wordcount_it",
       ]
       def testOpts = [
-              "${precommitTests.join(' ')}",
-              "--capture=no",    // Print stdout instantly
-              "--numprocesses=2",    // Number of tests running in parallel
-              "--timeout=1800",   // Timeout of whole command execution
+              "--tests=${precommitTests.join(',')}",
+              "--nocapture",    // Print stdout instantly
+              "--processes=2",    // Number of tests running in parallel
+              "--process-timeout=1800",   // Timeout of whole command execution
       ]
 
       def argMap = [
               "test_opts"   : testOpts,
               "sdk_location": files(configurations.distTarBall.files).singleFile,
               "worker_jar"  : dataflowWorkerJar,
-              "suite"       : "preCommitIT-df${pythonSuffix}",
-              "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
+              "suite"       : "preCommitIT-df${pythonSuffix}"
       ]
 
       if (runnerV2) {
@@ -109,16 +107,14 @@ task postCommitIT {
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
 
   doLast {
-    def argMap = [
-        "test_opts": basicTestOpts,
+    def testOpts = basicTestOpts + ["--attr=IT"]
+
+    def cmdArgs = mapToArgString([
+        "test_opts": testOpts,
         "sdk_location": files(configurations.distTarBall.files).singleFile,
         "worker_jar": dataflowWorkerJar,
-        "suite": "postCommitIT-df${pythonVersionSuffix}",
-        "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
-        "collect": "it_postcommit"
-    ]
-
-    def cmdArgs = mapToArgString(argMap)
+        "suite": "postCommitIT-df${pythonVersionSuffix}"
+    ])
     exec {
       executable 'sh'
       args '-c', ". ${envdir}/bin/activate && ${runScriptsDir}/run_integration_test.sh $cmdArgs"
@@ -132,14 +128,12 @@ task validatesRunnerBatchTests {
   dependsOn ":runners:google-cloud-dataflow-java:worker:shadowJar"
 
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
+  def testOpts = basicTestOpts + ["--attr=ValidatesRunner,!sickbay-batch"]
   def argMap = [
-          "test_opts"   : basicTestOpts,
+          "test_opts"   : testOpts,
           "worker_jar"  : dataflowWorkerJar,
           "sdk_location": files(configurations.distTarBall.files).singleFile,
-          "suite"       : "validatesRunnerBatchTests-df${pythonVersionSuffix}",
-          "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
-          "collect": "it_validatesrunner and not no_sickbay_batch"
-          ]
+          "suite"       : "validatesRunnerBatchTests-df${pythonVersionSuffix}"]
 
   if (project.hasProperty('useRunnerV2')) {
     argMap.put("runner_v2", "true")
@@ -164,14 +158,12 @@ task validatesRunnerStreamingTests {
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
 
   // TODO(BEAM-3544,BEAM-5025): Disable tests with 'sickbay-streaming' tag.
-  def argMap = ["test_opts": basicTestOpts,
+  def testOpts = basicTestOpts + ["--attr=ValidatesRunner,!sickbay-streaming"]
+  def argMap = ["test_opts": testOpts,
                 "streaming": "true",
                 "sdk_location": files(configurations.distTarBall.files).singleFile,
                 "worker_jar": dataflowWorkerJar,
-                "suite": "validatesRunnerStreamingTests-df${pythonVersionSuffix}",
-                "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed
-                "collect": "it_validatesrunner and not no_sickbay_streaming"
-                ]
+                "suite": "validatesRunnerStreamingTests-df${pythonVersionSuffix}"]
   if (project.hasProperty('useRunnerV2')) {
     argMap.put("runner_v2", "true")
     // KMS is not supported for streaming engine.
