[BEAM-3713] Add log level=INFO, collect tests with name ending in _it_test.py, split slow integration tests

--- a/sdks/python/pytest.ini
+++ b/sdks/python/pytest.ini
@@ -24,10 +24,12 @@ python_classes =
 python_functions =
 # Discover tests using filenames.
 # See conftest.py for extra collection rules.
-python_files = test_*.py *_test.py *_test_py3*.py
+python_files = test_*.py *_test.py *_test_py3*.py *_test_it.py
 
 markers =
     it_postcommit: collect for post-commit integration test runs
+    # Test with this marker has timeouts limits around 25 min
+    it_postcommit_slow: collect for post-commit integration slow test runs
     it_validatesrunner: collect for ValidatesRunner integration test runs
     it_validatescontainer: collect for ValidatesContainer integration test runs
     no_sickbay_streaming: run without sickbay-streaming
