--- a/sdks/python/test-suites/portable/common.gradle
+++ b/sdks/python/test-suites/portable/common.gradle
@@ -181,7 +181,14 @@ project.task("postCommitPy${pythonVersionSuffix}IT") {
             "apache_beam/io/external/xlang_kinesisio_it_test.py",
             "apache_beam/io/gcp/tests/xlang_spannerio_it_test.py",
     ]
-    def testOpts = ["${tests.join(' ')}"]
+    def basicTestOpts = [
+        "--capture=no",  // print stdout instantly
+        "--numprocesses=5", // run tests in parallel
+        "--color=yes", // console color
+        "--log-cli-level=INFO",
+        "--timeout=${60*25}"
+    ]
+    def testOpts = basicTestOpts + ["${tests.join(' ')}"]
     def pipelineOpts = [
         "--runner=FlinkRunner",
         "--project=apache-beam-testing",
