Changed version.py and gradle.properties to python dev version to create a test PR

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
 version=2.30.0-SNAPSHOT
-sdk_version=2.30.0.dev
+sdk_version=2.30.0.dev.dev
 
 javaVersion=1.8
 
