Run tests with dist=loadscope, avoid setup calls duplication

--- a/sdks/python/pytest.ini
+++ b/sdks/python/pytest.ini
@@ -28,8 +28,7 @@ python_files = test_*.py *_test.py *_test_py3*.py *_test_it.py
 
 markers =
     it_postcommit: collect for post-commit integration test runs
-    # Test with this marker has timeouts limits around 25 min
-    it_postcommit_slow: collect for post-commit integration slow test runs
+    it_postcommit_loadscope: collect for post-commit integration test runs with setup methods
     it_validatesrunner: collect for ValidatesRunner integration test runs
     it_validatescontainer: collect for ValidatesContainer integration test runs
     no_sickbay_streaming: run without sickbay-streaming
