[BEAM-3713] Add pytest option to run_integration_tests

--- a/sdks/python/pytest.ini
+++ b/sdks/python/pytest.ini
@@ -24,7 +24,7 @@ python_classes =
 python_functions =
 # Discover tests using filenames.
 # See conftest.py for extra collection rules.
-python_files = test_*.py *_test.py *_test_py3*.py
+python_files = test_*.py *_test.py *_test_py3*.py *_test_it.py
 
 markers =
     # Tests using this marker conflict with the xdist plugin in some way, such
