--- a/sdks/python/pytest.ini
+++ b/sdks/python/pytest.ini
@@ -27,6 +27,9 @@ python_functions =
 python_files = test_*.py *_test.py *_test_py3*.py *_test_it.py
 
 markers =
+    xlang_transforms: collect Cross Language transforms test runs
+    no_xlang_transforms: run without xlang_transforms
+    xlang_sql_expansion_service: collect for Cross Language with SQL expansion service test runs
     # Tests using this marker conflict with the xdist plugin in some way, such
     # as enabling save_main_session.
     no_xdist: run without pytest-xdist plugin
