--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -36,9 +36,21 @@ jobs:
         run: |
             OUTPUT=$(python scripts/ci/check_commits.py ${{ github.event.pull_request.url }})
             echo "::set-output name=result::$OUTPUT"
-      - uses: actions/github@v1.0.0
+#     - uses: actions/github@v1.0.0
+#       if: steps.squashbot.outputs.result != ''
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         args: comment "${{ steps.squashbot.outputs.result }}"
+      - uses: actions/github-script@v4
         if: steps.squashbot.outputs.result != ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          args: comment "${{ steps.squashbot.outputs.result }}"
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "${{ steps.squashbot.outputs.result }}"
+            })
+
