[BEAM-11608] backtracking change to build.gradle gcpProject variable

--- a/sdks/java/extensions/sql/build.gradle
+++ b/sdks/java/extensions/sql/build.gradle
@@ -182,7 +182,7 @@ task runPojoExample(type: JavaExec) {
 }
 
 task integrationTest(type: Test) {
-  def gcpProject = project.findProperty('gcpProject') ?: 'wizeline-apache-beam'
+  def gcpProject = project.findProperty('gcpProject') ?: 'apache-beam-testing'
   def gcsTempRoot = project.findProperty('gcsTempRoot') ?: 'gs://temp-storage-for-end-to-end-tests/'
 
   // Disable Gradle cache (it should not be used because the IT's won't run).
