--- a/sdks/python/test-suites/portable/common.gradle
+++ b/sdks/python/test-suites/portable/common.gradle
@@ -180,6 +180,7 @@ project.task("postCommitPy${pythonVersionSuffix}IT") {
             "apache_beam.io.external.xlang_kafkaio_it_test",
             "apache_beam.io.external.xlang_kinesisio_it_test",
             "apache_beam.io.gcp.tests.xlang_spannerio_it_test",
+            "apache_beam.io.external.xlang_debeziumio_it_test",
     ]
     def testOpts = ["--tests=${tests.join(',')}"]
     def pipelineOpts = [
