[BEAM-11227] Disabling build cache to reproduce the problem

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,8 @@
 #  See the License for the specific language governing permissions and
 # limitations under the License.
 ################################################################################
-org.gradle.caching=true
+# TODO: Revert this before merge. The build cache obscures timeout problem
+org.gradle.caching=false
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xss10240k
