[BEAM-11227] Trying logback that gives thread name logging

--- a/logging.properties
+++ b/logging.properties
@@ -1,6 +1,7 @@
 .level = FINE
-handlers = java.util.logging.ConsoleHandler
+handlers = org.slf4j.bridge.SLF4JBridgeHandler
 java.util.logging.SimpleFormatter.format = %1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS.%1$tL %4$s %2$s %5$s%6$s%n
 java.util.logging.ConsoleHandler.level = FINE
 org.apache.beam.level = FINE
 io.grpc.level = FINE
+
