--- a/sdks/java/expansion-service/build.gradle
+++ b/sdks/java/expansion-service/build.gradle
@@ -41,7 +41,7 @@ dependencies {
   compile library.java.vendored_grpc_1_26_0
   compile library.java.vendored_guava_26_0_jre
   compile library.java.slf4j_api
-  runtimeOnly library.java.slf4j_jdk14
+  testRuntimeOnly library.java.slf4j_jdk14
   testCompile library.java.junit
 }
 
